--- a/styles/style.css
+++ b/styles/style.css
@@ -13,4 +13,33 @@ html {
 body {
   font-family: Arial, Helvetica, sans-serif;
   min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  font-size: 2rem;
+  background: #ccc;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  min-height: 25rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  color: #fff;
+  text-shadow: 1px 1px 3px #000;
+}
+.container__btn {
+  border: none;
+  padding: 0.5rem 1.5rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  background: teal;
+  color: #fff;
+  text-shadow: 1px 1px 3px #000;
+}
+.container__btn:hover {
+  background: rgba(0, 128, 128, 0.8);
 }/*# sourceMappingURL=style.css.map */
