--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,2 +1,29 @@
 @import "defaults";
 
+.container {
+  font-size: 2rem;
+  background: #ccc;
+  padding: 1rem;
+  border-radius: .5rem;
+  min-height: 25rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  color: #fff;
+  text-shadow: 1px 1px 3px #000;
+
+  &__btn {
+    border: none;
+    padding: .5rem 1.5rem;
+    border-radius: .5rem;
+    cursor: pointer;
+    background: rgb(0, 128, 128);
+    color: #fff;
+    text-shadow: 1px 1px 3px #000;
+
+    &:hover {
+      background: rgba(0, 128, 128, .8);
+    }
+  }
+}
