--- a/styles/style.css
+++ b/styles/style.css
@@ -42,4 +42,36 @@ body {
 }
 .container__btn:hover {
   background: rgba(0, 128, 128, 0.8);
+}
+
+.modal.active {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.modal {
+  position: absolute;
+  top: 0;
+  opacity: 0;
+  transform: translateY(-15rem);
+  min-height: 15rem;
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  width: 30rem;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform 1s ease, opacity 0.5s ease;
+}
+.modal__close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  background: red;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
