--- a/styles/style.css
+++ b/styles/style.css
@@ -44,16 +44,32 @@ body {
   background: rgba(0, 128, 128, 0.8);
 }
 
-.modal.active {
-  transform: translateY(0);
+.modal-container.active {
+  opacity: 1;
+  pointer-events: auto;
+}
+.modal-container.active .modal {
+  transform: translate(-50%, 0);
   opacity: 1;
 }
 
-.modal {
+.modal-container {
+  pointer-events: none;
+  opacity: 0;
   position: absolute;
   top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 128, 128, 0.5);
+}
+.modal-container .modal {
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  left: 50%;
   opacity: 0;
-  transform: translateY(-15rem);
+  transform: translate(-50%, -15rem);
   min-height: 15rem;
   background: rgba(0, 0, 0, 0.5);
   color: #fff;
@@ -66,7 +82,8 @@ body {
   align-items: center;
   transition: transform 1s ease, opacity 0.5s ease;
 }
-.modal__close {
+.modal-container .modal__close {
+  pointer-events: auto;
   position: absolute;
   right: 0;
   top: 0;
