--- a/styles/style.scss
+++ b/styles/style.scss
@@ -28,35 +28,54 @@
   }
 }
 
-.modal.active {
-  transform: translateY(0);
+.modal-container.active {
   opacity: 1;
+  pointer-events: auto;
+
+  .modal {
+    transform: translate(-50%, 0);
+    opacity: 1;
+  }
 }
 
-.modal {
+.modal-container {
+  pointer-events: none;
+  opacity: 0;
   position: absolute;
   top: 0;
-  opacity: 0;
-  transform: translateY(-15rem);
-  min-height: 15rem;
-  background: rgba(0, 0, 0, .5);
-  color: #fff;
-  padding: 1rem;
-  border-radius: .5rem;
-  width: 30rem;
-  font-size: 1.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: transform 1s ease, opacity .5s ease;
-
-  &__close {
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 128, 128, .5);
+  
+  .modal {
+    pointer-events: none;
     position: absolute;
-    right: 0;
     top: 0;
-    padding: .5rem;
+    left: 50%;
+    opacity: 0;
+    transform: translate(-50%, -15rem);
+    min-height: 15rem;
+    background: rgba(0, 0, 0, .5);
+    color: #fff;
+    padding: 1rem;
     border-radius: .5rem;
-    background: red;
-    cursor: pointer;
+    width: 30rem;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 1s ease, opacity .5s ease;
+  
+    &__close {
+      pointer-events: auto;
+      position: absolute;
+      right: 0;
+      top: 0;
+      padding: .5rem;
+      border-radius: .5rem;
+      background: red;
+      cursor: pointer;
+    }
   }
 }
