Fix close modal

--- a/styles/style.css
+++ b/styles/style.css
@@ -64,8 +64,8 @@ body {
   background: rgba(0, 128, 128, 0.5);
 }
 .modal-container .modal {
-  pointer-events: none;
   position: absolute;
+  z-index: 1;
   top: 0;
   left: 50%;
   opacity: 0;
